Updated links; Added about me

--- a/index.html
+++ b/index.html
@@ -4,68 +4,60 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Household objects</title>
+    <title>Coding Projects</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>Household objects</h1>
+      <h1>Coding Projects</h1>
       <nav>
-        <a href="#">Grid</a>
-        <a href="#">A-Z</a>
-        <a href="#">About</a>
+        <a href="./index.html" class="active">Projects</a>
+        <a href="https://docs.google.com/document/d/1kR4dyKhPd3i3F8GFFOWf9n7niDfeiWw1EybwNuGNwJo/export?format=pdf">Resume</a>
+        <a href="./about_me.html">About Me</a>
       </nav>
     </header>
 
     <section>
       <div>
-        <figure>
-          <img src="photo1.jpg" />
+        <a href="https://brett-book-club.netlify.app/">
+          <figure>
+            <img src="./photos/book-club.png" />
 
-          <figcaption>Toothbrush</figcaption>
-        </figure>
+            <figcaption>Book Club<br/>(API with Search)</figcaption>
+          </figure>
+        </a>
       </div>
 
       <div>
-        <figure>
-          <img src="photo2.jpg" />
+        <a href="https://brett-moody-blues.netlify.app/">
+          <figure>
+            <img src="./photos/moody.png" />
 
-          <figcaption>Flower</figcaption>
-        </figure>
+            <figcaption>Moody Blues<br/>(Faux Sign Up Page)</figcaption>
+          </figure>
+        </a>
       </div>
 
       <div>
-        <figure>
-          <img src="photo3.jpg" />
+        <a href="https://brett-photo-slideshow.netlify.app/">
+          <figure>
+            <img src="./photos/slideshow.png" />
 
-          <figcaption>Soap</figcaption>
-        </figure>
+            <figcaption>Slideshow</figcaption>
+          </figure>
+        </a>
       </div>
 
       <div>
-        <figure>
-          <img src="photo4.jpg" />
+        <a href="https://brett-moody-blues-purchase-tix.netlify.app/">
+          <figure>
+            <img src="./photos/purchase-tix.png" />
 
-          <figcaption>Carton of eggs</figcaption>
-        </figure>
-      </div>
-
-      <div>
-        <figure>
-          <img src="photo5.jpg" />
-
-          <figcaption>Basketball</figcaption>
-        </figure>
-      </div>
-
-      <div>
-        <figure>
-          <img src="photo6.jpg" />
-
-          <figcaption>Teddy bear</figcaption>
-        </figure>
-      </div>
+            <figcaption>Moody Blues Variant<br/>(Faux Ticket Purchase)</figcaption>
+          </figure>
+        </div>
+      </a>
     </section>
 
     <script src="slides.js"></script>
